add Safari support

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="style-main.css" />
-    <title>Computer Store</title>
+    <meta name="theme-color" content="#89917E">
+    <title>Komputer Store</title>
   </head>
   <body>
     <div class="grid">
-      <header><h1>Computer Store</h1></header>
+      <header><h1>Komputer Store</h1></header>
       <section class="bank">
         <h2>Bank</h2>
         <div class="balanceDiv">
