--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p id="features"></p>
       </section>
       <section class="store">
-        <img id="computerImage" alt="Could not find image..." />
+        <img id="computerImage" alt="There is no image of this cumputer..." />
 
         <div class="storeDiv">
           <h3 id="title"></h3>
@@ -49,7 +49,6 @@
           <p2 id="price"></p2><br>
           <button id="buybutton" onclick="buy()" class="buyButton">Buy</button>
           <p id="buyErrors">Insufficient funds..</p>
-          <p id="buyOk">Success</p>
 
         </div>
       </section>
