--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
       <section class="store">
-        <img id="computerImage" alt="There is no image of this cumputer..." />
+        <img id="computerImage" alt="There is no image of this komputer..." />
         <div class="storeDiv">
           <h3 id="title"></h3>
           <p2 id="description"></p2>
