--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="laptops">
         <h2>Laptops</h2>
         <select name="Computers" , id="computers"></select>
-        <ul id="features"></ul>
+        <ul id="features" class="featureList"></ul>
       </section>
 
 
@@ -57,7 +57,6 @@
         <div class="buyDiv">
           <p2 id="price"></p2><br />
           <button id="buybutton" onclick="buy()" class="buyButton">Buy</button>
-          <p id="buyErrors">Insufficient funds..</p>
         </div>
       </section>
       <footer></footer>
